<resources>
    <string name="app_name">Hello Storj</string>
    <string name="title_buckets">Browse</string>
    <string name="title_register">Register</string>
    <string name="title_keys">Import keys</string>
    <string name="title_bridge_info">Bridge info</string>
    <string name="title_mnemonic">Generate mnemonic</string>
    <string name="title_timestamp">Get timestamp</string>
    <string name="title_libs">Native libraries</string>
    <string name="title_fileinfo">File info</string>
    <string name="title_new_bucket">New bucket</string>
    <string name="description_keys">Generates authentication file with the storj_encrypt_write_auth() native function and saves it in the app\'s data directory</string>
    <string name="description_register">Creates new bridge account with the storj_bridge_register() native function</string>
    <string name="description_bridge_info">Storj bridge info retrieved with the storj_bridge_get_info() native function</string>
    <string name="description_mnemonic">Mnemonic generated with the storj_mnemonic_generate() native function</string>
    <string name="description_timestamp">Current UNIX timestamp retrieved with the storj_util_timestamp() native function</string>
    <string name="button_keys">Save</string>
    <string name="button_register">Register</string>
    <string name="button_mnemonic">Regenerate</string>
    <string name="button_timestamp">Update</string>
    <string name="button_download">Download</string>
    <string name="hint_keys_user">Bridge user name (email)</string>
    <string name="hint_keys_pass">Bridge password</string>
    <string name="hint_keys_mnemonic">Encryption key</string>
    <string name="hint_register_user">Email</string>
    <string name="hint_register_pass">Password</string>
    <string name="hint_register_confirm_pass">Confirm password</string>
    <string name="hint_new_bucket_name">Bucket name</string>
    <string name="error_keys_user">Invalid email</string>
    <string name="error_keys_pass">Password can\'t be empty</string>
    <string name="error_keys_mnemonic">Invalid mnemonic</string>
    <string name="error_register_pass_dont_match">Passwords don\'t match</string>
    <string name="error_invalid_url">Invalid Bridge URL</string>
    <string name="keys_import_success">Keys imported</string>
    <string name="keys_import_invalid_credentials">User and password don\'t match</string>
    <string name="keys_import_invalid_mnemonic">Encryption key cannot decrypt content</string>
    <string name="keys_import_fail">Importing keys failed</string>
    <string name="keys_import_action">Import</string>
    <string name="keys_export_fail">Failed decrypting keys</string>
    <string name="keys_imported">Did you import your keys?</string>
    <string name="browse_no_buckets">No buckets</string>
    <string name="browse_no_files">No files</string>
    <string name="download_in_progress">The file will be downloaded. See notification for details.</string>
    <string name="download_permission_denied">Write permission denied. Download aborted.</string>
    <string name="upload_in_progress">The file will be uploaded. See notification for details.</string>
    <string name="upload_complete">Upload complete. Touch to open bucket.</string>
    <string name="upload_permission_denied">Read permission denied. Upload not possible.</string>
    <string name="upload_not_supported">Document provider not supported. Upload not possible.</string>
    <string name="register_confirmation_sent">Successfully registered %1$s, please check your email to confirm.</string>
    <string name="channel_name">File Transfer</string>
    <string name="channel_description">Notifications for downloading and uploading files</string>
</resources>
